# model-trys

./: .gitignore  .pre-commit-config.yaml  README.md  anthropic_claude-opus-try.ipynb  fertility_clinic_success_rate.ipynb  google_gemini-try.ipynb  langchain_llava.ipynb  langchain_rag_eval_ragas.ipynb  langraph_rag_agent_llama3_local.ipynb  ollama-structured-outputs-llama3.2.ipynb  openai_intro-to-gpt4o.ipynb  pyproject.toml
notebooks/: hf-transformer-understanding.py  marker-pdf-extraction.py
src/: main.py
